# adjacency

./: .gitignore  README.md  pyproject.toml
docs/: USERGUIDE.md
docs/examples/: lab-snapshot.json  lab-topology.dot  lab-topology.html
inventory/: credentials.yaml.example  hosts.yaml.example
lab/: README.md  medium-ceos.clab.yml  medium.clab.yml  small-ceos.clab.yml  small.clab.yml
lab/configs/: ceos-leaf-01.cfg  ceos-leaf-02.cfg  ceos-spine-01.cfg  ceos-spine-02.cfg  leaf-01.cfg  leaf-02.cfg  spine-01.cfg  spine-02.cfg
lab/configs/medium/: access-01.cfg  access-02.cfg  border-01.cfg  campus-core.cfg  dist-01.cfg  dist-02.cfg  leaf-01.cfg  leaf-02.cfg  spine-01.cfg  spine-02.cfg
lab/configs/medium-ceos/: access-01.cfg  access-02.cfg  border-01.cfg  campus-core.cfg  dist-01.cfg  dist-02.cfg  leaf-01.cfg  leaf-02.cfg  spine-01.cfg  spine-02.cfg
lab/lab-inventory/: hosts.yaml
src/adjacency/: __init__.py  cli.py  collector.py  crawl.py  credentials.py  models.py  output.py  store.py  virtual_macs.py  visualize.py
src/adjacency/collectors/: __init__.py  arp.py  cdp.py  facts.py  interfaces.py  lldp.py  mac.py  routes.py
src/adjacency/rationalize/: __init__.py  engine.py
tests/: conftest.py  test_crawl.py  test_credentials.py  test_facts.py  test_models.py  test_rationalize.py  test_routes.py  test_simulated_network.py  test_store.py  test_virtual_macs.py  test_visualize.py
tests/integration/: test_lab_discovery.py
